Fix Card alignment

--- a/src/scss/Chat/Cards.scss
+++ b/src/scss/Chat/Cards.scss
@@ -4,7 +4,7 @@
   margin-top: 2em;
   overflow-x: scroll;
   padding: 30px 0;
-  // text-align: center;
+  text-align: center;
 
   > li {
     display: inline-block;
@@ -55,6 +55,7 @@
     padding: 5px 16px;
     height: 200px;
     overflow: hidden;
+    text-align: left;
 
     .title {
       font-weight: 500;
@@ -72,6 +73,7 @@
     }
     .Links {
       margin: 35px 0;
+
       a {
         display: block;
         text-align: center;
